--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 <div class="container-fluid">
     <div class="container p-3 mt-3">
-        <form>
+        <form method = "post">
             <div class="form-group">
-              <label for="exampleInputEmail1">Email address</label>
-              <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Enter UserId">
+              <label for="exampleInputEmail1">User name</label>
+              <input type="text" class="form-control" id="exampleInputEmail1" name="user_name" placeholder="Enter UserId">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" id="exampleInputPassword1" name="password" placeholder="Password">
             </div>
             <div class="form-group form-check">
               <input type="checkbox" class="form-check-input" id="exampleCheck1">
