--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,10 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-    {% block content %}{% endblock %}
+    <div class="container-fluid">
+        <div class="container p-3 mt-3">
+            {% block content %}{% endblock %}
+        </div>
+    </div>
 </body>
 </html>
