driver page UI update

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -2,9 +2,9 @@
 {% block title %}Driver{% endblock %}
 {% block content %}
 <div class="container-fluid">
-    <div class="container p-3 mt-3">
-        <a class="btn btn-outline-primary" href="#" role="button">Sale</a>
-        <a class="btn btn-outline-primary" href="#" role="button">Report</a>
+    <div class="container p-3 mt-3 align-bottom">
+        <a class="btn btn-primary d-block py-5" href="#" role="button">Sale</a>
+        <a class="btn btn-primary d-block mt-5 py-5" href="#" role="button">Report</a>
     </div>
 </div>
 {% endblock  %}
