--- a/templates/driver.html
+++ b/templates/driver.html
@@ -1,6 +1,15 @@
 {% extends 'base.html' %}
 {% block title %}Driver{% endblock %}
 {% block content %}
+{% with messages = get_flashed_messages() %}
+  {% if messages %}
+    <ul class=flashes>
+    {% for message in messages %}
+      <li>{{ message }}</li>
+    {% endfor %}
+    </ul>
+  {% endif %}
+{% endwith %}
 <div class="container-fluid">
     <div class="container p-3 mt-3">
         <a class="btn btn-outline-primary" href="#" role="button">Sale</a>
