--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -15,13 +15,13 @@
 <table border="3px">
   <tr>
     <th>Name</th>
-    <th>Phone No</th>
     <th>Email</th>
+    <th>Phone no</th>
     <th>Location</th>
   </tr>
   {% for row in value %}
     <tr>
-      <td>{{row[0]}}</td>
+      <td><a href="/view_customer?customer_id={{row[4]}}">{{row[0]}}</a></td>
       <td>{{row[1]}}</td>
       <td>{{row[2]}}</td>
       <td>{{row[3]}}</td>
