Edit user completed

--- a/templates/view_user.html
+++ b/templates/view_user.html
@@ -19,6 +19,7 @@
     <th>Email</th>
     <th>Phone</th>
     <th>Role</th>
+    <th>Edit</th>
   </tr>
   {% for row in value %}
     <tr>
@@ -33,6 +34,7 @@
         {%   print("Admin")%}
         {% endif %}
       </td>
+      <td><a href="edit_user/{{row[5]}}"> <-Edit </a></td>
     </tr>
   {% endfor %}
 
