--- a/templates/add_customer.html
+++ b/templates/add_customer.html
@@ -1,5 +1,5 @@
 {% extends 'base.html'%}
-{% block title %} Add Products {% endblock %}
+{% block title %} Add Customer {% endblock %}
 {% block content %}
 {% with messages = get_flashed_messages() %}
   {% if messages %}
