--- a/templates/edit_customer.html
+++ b/templates/edit_customer.html
@@ -15,19 +15,19 @@
 <form action="#" method="post">
   <div class="form-group">
     <label for="name">Name of customer</label>
-    <input type="text" class="form-control" id="name" name="name" placeholder={{value[0]}}>
+    <input type="text" class="form-control" id="name" name="name" value={{value[0]}}>
   </div>
   <div class="form-group">
     <label for="phone_no">Phone No:</label>
-    <input type="text" class="form-control" id="phone_no"  name="phone_no" placeholder={{value[2]}}>
+    <input type="text" class="form-control" id="phone_no"  name="phone_no" value={{value[2]}}>
   </div>
   <div class="form-group">
     <label for="email">E mail</label>
-    <input type="email" class="form-control" id="email"  name="email" placeholder={{value[1]}}>
+    <input type="email" class="form-control" id="email"  name="email" value={{value[1]}}>
   </div>
   <div class="form-group">
     <label for="location">Location</label>
-    <input type="text" class="form-control" id="location"  name="location" placeholder={{value[3]}}>
+    <input type="text" class="form-control" id="location"  name="location" value={{value[3]}}>
   </div>
   <button type="submit" class="btn btn-primary btn-block">Submit</button>
 
