--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -15,15 +15,15 @@
 <form action="#" method="post">
   <div class="form-group">
     <label for="pname">Name of product</label>
-    <input type="text" class="form-control" id="pname" name="pname" placeholder={{value[0]}}>
+    <input type="text" class="form-control" id="pname" name="pname" value={{value[0]}}>
   </div>
   <div class="form-group">
     <label for="bcode">Barcode</label>
-    <input type="number" class="form-control" id="bcode"  name="bcode" placeholder={{value[1]}}>
+    <input type="number" class="form-control" id="bcode"  name="bcode" value={{value[1]}}>
   </div>
   <div class="form-group">
     <label for="price">Price</label>
-    <input type="number" class="form-control" id="price"  name="price" placeholder={{value[2]}}>
+    <input type="number" class="form-control" id="price"  name="price" value={{value[2]}}>
   </div>
   <button type="submit" class="btn btn-primary btn-block">Submit</button>
 
