index mobile ui test-2

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     </ul>
   {% endif %}
 {% endwith %}
-<div class="d-flex flex-column justify-content-center align-items-center w-100">
+<div class="container">
   <h2 class="m-4">Login!</h2>
   <form method = "post" class="w-100">
     <div class="form-group">
