--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="d-flex h-100">
-    <div class="container justify-content-center d-flex p-3">
+    <div class="d-flex flex-column justify-content-center align-items-center w-100">
         {% block content %}{% endblock %}
     </div>
 </body>
