--- a/templates/sales.html
+++ b/templates/sales.html
@@ -10,7 +10,7 @@
     </ul>
   {% endif %}
 {% endwith %}
-
+<div class="container">
 <h1>Sales</h1>
 <form action="#" method="post">
   <div class="form-group">
@@ -25,8 +25,10 @@
     <label for="qty">Quatity</label>
     <input type="number" class="form-control" id="qty"  name="qty" placeholder="Enter quantity">
   </div>
-  <button type="submit" class="btn btn-outline-danger w-25">Done</button>
-  <button type="submit" class="btn btn-outline-success w-25">Next</button>
+  <div class="d-flex flex-row justify-content-between">
+  <button type="submit" class="btn btn-outline-danger flex-fill mr-2">Done</button>
+  <button type="submit" class="btn btn-outline-success flex-fill ml-2">Next</button>
+  </div>
 </form>
-
+</div>
 {% endblock %}
