--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -1,5 +1,16 @@
 .alert {
+    /* display: flex !important; 
+    justify-content: space-between;  */
     position: absolute;
     margin-top: 0;
     width: 100%;
+    border: 0;
+    border-radius: 0;
+    padding: 0;
+}
+.alert_msg {
+    margin: .75rem 1.25rem;
+}
+.close {
+    margin: .75rem 1.25rem;
 }
