PWA test-1: SW not proper working, prblm with scope. Manifest sample icons

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -3,9 +3,9 @@
 {% block content %}
 
 <div class="container">
-  <div class="d-flex flex-row p-3 mt-3">
-    <a class="btn btn-primary d-block flex-fill p-5 mr-3" href="#" role="button"><h3>Report</h3></a>
-    <a class="btn btn-primary d-block flex-fill p-5 ml-3 align-items-end" href="/sales" role="button"><h3>Sale</h3></a>
+  <div class="d-flex flex-column p-3 mt-3">
+    <a class="btn btn-primary d-block flex-fill p-5 mb-3" href="#" role="button"><h3>Report</h3></a>
+    <a class="btn btn-primary d-block flex-fill p-5 mt-3 align-items-end" href="/sales" role="button"><h3>Sale</h3></a>
   </div>
 </div>
 {% endblock  %}
