--- a/templates/view_product.html
+++ b/templates/view_product.html
@@ -4,17 +4,32 @@
 
 
 <h1>View products</h1>
+<span id = "pass"></span>
 <table border="3px">
   <tr>
     <th>Name</th>
     <th>Barcode</th>
     <th>Price</th>
+    <th>Edit</th>
+    <th>Delete</th>
   </tr>
   {% for row in value %}
     <tr>
+      <td>{{row[0]}}</td>
       <td>{{row[1]}}</td>
       <td>{{row[2]}}</td>
-      <td>{{row[3]}}</td>
+      <td><a href="edit_product/{{row[3]}}"> <-Edit </a></td>
+      <td>
+     <button id="demo{{row[3]}}">Delete</button>
+      </td>
+    <script type="text/javascript">
+      document.getElementById("demo{{row[3]}}").addEventListener("click", x);
+        function x() {
+          document.getElementById("pass").innerHTML='<form action="#" method="POST"><div class="form-group"><label for="password">Enter your Password {{session['user_name']}} :</label><input type="password" class="form-control" id="password"  name="password" placeholder="Password" required><input type="hidden" id = "dltproduct" name="dltproduct" value={{row[3]}}></div><button type="submit" class="btn btn-primary btn-block">Submit</button></form> {{row[3]}}';
+        }
+
+    </script>
+
     </tr>
   {% endfor %}
 
