--- a/templates/view_customer_specific.html
+++ b/templates/view_customer_specific.html
@@ -19,7 +19,8 @@
     qrcode.makeCode();
 </script>
 <h1>View Customers</h1>
-<table border="3px">
+<table class="table">
+  <thead class="thead-light">
   <tr>
     <th>Name</th>
     <th>Email</th>
