--- a/templates/view_user.html
+++ b/templates/view_user.html
@@ -31,7 +31,7 @@
       </td>
       <td><a href="edit_user/{{row[5]}}"> <-Edit </a></td>
       <td>
-     <button id="demo{{row[5]}}">Delete</button>
+     <button type="button" id="demo{{row[5]}}" class="btn btn-danger">Delete</button>
       </td>
     </tr>
     <script type="text/javascript">
