--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -62,4 +62,9 @@
   .modal-content {
       padding: 2px 16px;
 }
-  
+#pass {
+    position: absolute;
+    margin-bottom: 0;
+    width: 100%;
+    background-color: #fefefe;
+}
