--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     </div>
     <div class="d-flex flex-column justify-content-center align-items-center w-100" id="body">
         <div class="container m-5">
-          <a href="{{url_for("logout")}}">Logout</a>
+          <!-- <a href="{{url_for("logout")}}">Logout</a> -->
         {% block content %}{% endblock %}
         </div>
     </div>
