--- a/templates/view_customer.html
+++ b/templates/view_customer.html
@@ -28,7 +28,7 @@
       <script type="text/javascript">
         document.getElementById("demo{{row[4]}}").addEventListener("click", x);
           function x() {
-            document.getElementById("pass").innerHTML='<form action="#" method="POST"><div class="form-group"><label for="password">Enter your Password {{session['user_name']}} :</label><input type="password" class="form-control" id="password"  name="password" placeholder="Password" required><input type="hidden" id = "dltcustomer" name="dltcustomer" value={{row[4]}}></div><button type="submit" class="btn btn-primary btn-block">Submit</button></form> {{row[4]}}';
+            document.getElementById("pass").innerHTML='<form action="#" method="POST"><div class="form-group"><label for="password">Enter your Password {{session['user_name']}} :</label><input type="password" class="form-control" id="password"  name="password" placeholder="Password" required></div><button type="submit" id = "dltcustomer" name="dltcustomer" value={{row[4]}} class="btn btn-primary btn-block">Submit</button></form> {{row[4]}}';
           }
 
       </script>
