--- a/templates/index.html
+++ b/templates/index.html
@@ -13,8 +13,19 @@
       <input type="password" class="form-control p-4" id="exampleInputPassword1" name="password" placeholder="Password">
     </div>
     <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+      <input type="checkbox" class="form-check-input" onclick="Showpass()" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Show Password</label>
+      <script type="text/javascript">
+        function Showpass() {
+          var x = document.getElementById("exampleInputPassword1");
+          if (x.type === "password"){
+            x.type = "text";
+          }
+          else{
+            x.type = "password";
+          }
+        }
+      </script>
     </div>
     <button type="submit" class="btn btn-primary btn-block p-3">Submit</button>
   </form>
