--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -10,7 +10,8 @@
   </div>
   <div class="form-group">
     <label for="username">Username</label>
-    <input type="text" class="form-control" id="username"  name="username" placeholder="Enter Username">
+    <input type="text" class="form-control" id="username"  name="username" placeholder="Enter Username" autocomplete="off">
+    <div class="alert alert-info" id="uname_response" ></div>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
@@ -36,5 +37,30 @@
 
 
 </form>
+<script>
+$(document).ready(function(){
 
+ $("#username").keyup(function(){
+
+    var username = $(this).val().trim();
+
+    if(username != ''){
+
+       $.ajax({
+          url: '/username_check',
+          type: 'post',
+          data: {username: username},
+          success: function(response){
+            $('#uname_response').html(response);
+
+           }
+       });
+    }else{
+       $("#uname_response").html("");
+    }
+
+  });
+
+});
+</script>
 {% endblock %}
