--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -11,7 +11,8 @@
   </div>
   <div class="form-group">
     <label for="username">Username</label>
-    <input type="text" class="form-control" id="username"  name="username" value={{value[1]}}>
+    <input type="text" class="form-control" id="username"  name="username" value={{value[1]}} autocomplete="off">
+    <div class="alert alert-info" id="uname_response" ></div>
   </div>
   <div class="form-group">
     <label for="password">Current Password</label>
@@ -40,5 +41,30 @@
   <button type="submit" class="btn btn-danger btn-block">Submit</button>
 </form>
 </div>
+<script>
+$(document).ready(function(){
 
+ $("#username").keyup(function(){
+
+    var username = $(this).val().trim();
+
+    if(username != ''){
+
+       $.ajax({
+          url: '/username_check',
+          type: 'post',
+          data: {username: username},
+          success: function(response){
+            $('#uname_response').html(response);
+
+           }
+       });
+    }else{
+       $("#uname_response").html("");
+    }
+
+  });
+
+});
+</script>
 {% endblock %}
