--- a/static/style/stylesheet.css
+++ b/static/style/stylesheet.css
@@ -1,19 +1,19 @@
-.alert {
-    /* display: flex !important; 
-    justify-content: space-between;  */
+/* .alert { 
+    display: flex !important; 
+    justify-content: space-between; 
     position: absolute;
     margin-top: 0;
     width: 100%;
     border: 0;
     border-radius: 0;
     padding: 0;
-}
-.alert_msg {
+} */
+/* .alert_msg {
     margin: .75rem 1.25rem;
 }
 .close {
     margin: .75rem 1.25rem;
-}
+} */
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
@@ -47,7 +47,7 @@
   /* The Close Button */
   .close {
     color: white;
-    float: right;
+    /* float: right; */
     font-size: 28px;
     font-weight: bold;
 }
