--- a/templates/add_product.html
+++ b/templates/add_product.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <h1>Add Products</h1>
-<form action="#" method="post">
+<form action="#" method="post" enctype="multipart/form-data">
   <div class="form-group">
     <label for="pname">Name of product</label>
     <input type="text" class="form-control" id="pname" name="pname" placeholder="Enter Name of the product">
@@ -15,6 +15,10 @@
   <div class="form-group">
     <label for="price">Price</label>
     <input type="number" class="form-control" id="price"  name="price" placeholder="Enter the price of the product">
+  </div>
+  <div class="form-group">
+    <label for="product_pic">Product Picture</label>
+    <input type="file" class="form-control" id="product_pic"  name="product_pic" >
   </div>
   <button type="submit" class="btn btn-primary btn-block">Submit</button>
 
