--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,11 +1,11 @@
 {% extends 'base.html'%}
-{% block title %} Add Products {% endblock %}
+{% block title %} Sales {% endblock %}
 {% block content %}
 <h1>Sales</h1>
 <form action="#" method="post">
   <div class="form-group">
     <label for="name">Name customer</label>
-    <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name of Customer">
+    <input type="text" class="form-control" id="name" name="name" placeholder="Enter Name of Customer" autocomplete="off">
   </div>
   <div class="form-group">
     <label for="prod_id">Product id:</label>
