--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
         {% endif %}
       {% endwith %}
   </div>
-  <div class="flex flex-col items-center h-full w-full" id="body"><!--dynamicPageContainer: fullscreen-->
+  <div class="flex flex-col lg:bg-gray-100 items-center h-full w-full" id="body"><!--dynamicPageContainer: fullscreen-->
                 {% block content %}{% endblock %}
   </div>
   </div>
