--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
-<body class="font-opensans">
+<body class="font-roboto">
   <div class="h-screen relative"><!--Fullscreen Container-->
     <div class="{{ session['flash_box'] }} absolute top-0 w-full bg-yellow-300 flex items-center" id="flash" role="alert">
       <!-- {{session.pop('flash_box',None)}} -->
