--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,20 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
 {% block content %}
-<div class="flex flex-col max-w-screen-lg lg:rounded lg:m-3 lg:shadow-lg bg-white h-screen items-center md:flex-row">
+<div class="flex flex-col max-w-screen-lg lg:rounded lg:m-3 lg:shadow-lg bg-white h-screen items-center md:flex-row md:px-10 lg:px-16">
   <div class="flex-auto w-full p-4 flex flex-col justify-center">
-    <h1 class="text-5xl text-gray-600 font-bold">REACH</h1>
-    <h1 class="text-3xl text-gray-400">Distribution Manager</h1>
+    <h1 class="text-4xl sm:text-5xl text-gray-600 font-bold font-roboto">REACH</h1>
+    <h1 class="text-lg sm:text-3xl text-gray-400">Distribution Manager</h1>
     <img src="/static/images/warehouse.jpg" alt="">
   </div>
-  <div class="flex flex-col justify-center items-center md:w-1/3 flex-shrink-0">
+  <div class="flex flex-col justify-center items-center w-full md:w-2/5 flex-shrink-0">
     <form method = "post" class="flex flex-col space-y-2 items-center justify-center w-full py-10">
         <!-- <label for="exampleInputEmail1">User name</label> -->
-        <input type="text" class="p-2 px-6 rounded-md border-2 w-10/12" id="exampleInputEmail1" name="user_name" placeholder="Enter UserId">
+        <input type="text" class="p-2 px-6 rounded border-2 w-10/12 hover:shadow-md transform hover:scale-105 transition" id="exampleInputEmail1" name="user_name" placeholder="Enter UserId">
         
-        <div class="relative flex items-center w-10/12">
+        <div class="relative flex items-center w-10/12 hover:shadow-md transform hover:scale-105 transition">
         <!-- <label for="exampleInputPassword1">Password</label> -->
-        <input type="password" class="p-2 px-6 rounded-md border-2 w-full" id="exampleInputPassword1" name="password" placeholder="Password">
+        <input type="password" class="p-2 px-6 rounded border-2 w-full" id="exampleInputPassword1" name="password" placeholder="Password">
         <svg onclick="Showpass()" class="field-icon w-4 h4 text-gray-400 float-right absolute top-3.5 right-3 hover:text-gray-800 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
           <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
@@ -34,7 +34,7 @@
             }
           }
         </script>
-        <button type="submit" class="bg-indigo-500 p-2 w-10/12 rounded-md text-white hover:shadow-lg transform hover:scale-105 transition focus:text-indigo-900 focus:ring-offset-indigo-900 focus:ring-2 focus:bg-indigo-50 focus:outline-none">Submit</button>
+        <button type="submit" class="bg-indigo-500 p-2 w-10/12 rounded text-white tracking-wider hover:shadow-md transform hover:scale-105 transition focus:text-indigo-900 focus:ring-offset-indigo-900 focus:ring-2 focus:bg-indigo-50 focus:outline-none">Submit</button>
     </form>
   </div>
 </div>
