--- a/templates/base.html
+++ b/templates/base.html
@@ -12,14 +12,14 @@
 </head>
 <body class="font-roboto">
   <div class="h-screen relative"><!--Fullscreen Container-->
-    <div class="{{ session['flash_box'] }} absolute top-0 w-full bg-yellow-300 flex items-center" id="flash" role="alert">
+    <div class="{{ session['alertFlash'] }} absolute top-0 w-full flex items-center" id="flash" role="alert">
       <!-- {{session.pop('flash_box',None)}} -->
       {% with messages = get_flashed_messages() %}
         {% if messages %}
           {% for message in messages %}
             <p class="alert_msg flex-auto py-1 px-4">{{ message }}</p>
           {% endfor %}
-          <button type="bg" class="text-white text-2xl py-1 px-4" onclick="document.getElementById('flash').style.visibility='hidden'">
+          <button type="bg" class="text-2xl py-1 px-4 focus:outline-none" onclick="document.getElementById('flash').style.visibility='hidden'">
             <span aria-hidden="true">&times;</span>
           </button>
         {% endif %}
