--- a/templates/driver.html
+++ b/templates/driver.html
@@ -32,7 +32,7 @@
     <div class="p-6 py-12 h-full flex flex-col justify-between">
       <ul class="space-y-5">
         <li class="text-gray-600">
-          Logout
+          <a href="/logout">Logout</a>
         </li>
         <li class="text-gray-600">
           Profile
