--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
   <div class="flex flex-col justify-center items-center w-full md:w-2/5 flex-shrink-0">
     <form method = "post" class="flex flex-col space-y-2 items-center justify-center w-full py-10">
         <!-- <label for="exampleInputEmail1">User name</label> -->
-        <input type="text" class="p-2 px-6 rounded border-2 w-10/12 hover:shadow-md transform hover:scale-105 transition" id="exampleInputEmail1" name="user_name" placeholder="Enter UserId">
+        <input type="text" class="p-2 px-6 rounded border-2 w-10/12 hover:shadow-md transform hover:scale-105 transition focus:outline-none" id="exampleInputEmail1" name="user_name" placeholder="Enter UserId">
         
         <div class="relative flex items-center w-10/12 hover:shadow-md transform hover:scale-105 transition">
         <!-- <label for="exampleInputPassword1">Password</label> -->
-        <input type="password" class="p-2 px-6 rounded border-2 w-full" id="exampleInputPassword1" name="password" placeholder="Password">
-        <svg onclick="Showpass()" class="field-icon w-4 h4 text-gray-400 float-right absolute top-3.5 right-3 hover:text-gray-800 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+        <input type="password" class="p-2 px-6 rounded border-2 w-full focus:outline-none" id="exampleInputPassword1" name="password" placeholder="Password">
+        <svg onclick="Showpass()" id="eye" class="field-icon w-4 h4 text-gray-400 float-right absolute top-3.5 right-3 hover:text-gray-600 cursor-pointer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
           <path d="M10 12a2 2 0 100-4 2 2 0 000 4z" />
           <path fill-rule="evenodd" d="M.458 10C1.732 5.943 5.522 3 10 3s8.268 2.943 9.542 7c-1.274 4.057-5.064 7-9.542 7S1.732 14.057.458 10zM14 10a4 4 0 11-8 0 4 4 0 018 0z" clip-rule="evenodd" />
         </svg>
@@ -26,15 +26,18 @@
         <script type="text/javascript">
           function Showpass() {
             var x = document.getElementById("exampleInputPassword1");
+            var y = document.getElementById("eye").classList;
             if (x.type === "password"){
               x.type = "text";
+              y.add("text-indigo-600");
             }
             else{
               x.type = "password";
+              y.remove("text-indigo-600");
             }
           }
         </script>
-        <button type="submit" class="bg-indigo-500 p-2 w-10/12 rounded text-white tracking-wider hover:shadow-md transform hover:scale-105 transition focus:text-indigo-900 focus:ring-offset-indigo-900 focus:ring-2 focus:bg-indigo-50 focus:outline-none">Submit</button>
+        <button type="submit" class="bg-indigo-500 p-2 w-10/12 rounded text-white tracking-wider hover:shadow-md transform hover:scale-105 transition focus:outline-none active:text-indigo-900  active:ring-offset-indigo-900  active:ring-2  active:bg-indigo-50  active:outline-none">Submit</button>
     </form>
   </div>
 </div>
