--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,6 +1,9 @@
 {% extends 'base.html'%}
 {% block title %} Sales {% endblock %}
 {% block content %}
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <h1>Sales</h1>
 <form action="#" method="post">
   <div class="form-group">
@@ -20,4 +23,28 @@
   <button type="submit" class="btn btn-outline-success flex-fill ml-2">Next</button>
   </div>
 </form>
+
+<script type="text/javascript">
+
+  $( function() {
+      
+  
+      $( "#customer_name").autocomplete({
+      source: function( request, response ) {
+          $.ajax( {
+          url: "autocomplete_customer_name",
+          dataType: "json",
+          data: {
+              term: request.term
+          },
+          success: function( data ) {
+              response( data );
+          }
+          } );
+      },
+      minLength: 2,
+      
+      } );
+  } );
+  </script>
 {% endblock %}
