Initialisation of charts

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}">
     <script type="text/javascript" src="{{ url_for('static', filename="js/main.js") }}"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body class="font-roboto">
